--- a/modularpruebis/loki-module/pom.xml
+++ b/modularpruebis/loki-module/pom.xml
@@ -10,12 +10,7 @@
     </parent>
 
     <artifactId>loki-module</artifactId>
-
-    <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
